# yabibf

./: LICENSE  README.md  pyproject.toml
tests/: association-for-computational-linguistics.csl  example.bib  example_duplicate.bib  test_decorator.py  test_formatter.py  test_integration.py  test_parser.py
yabibf/: __init__.py  decorator.py  formatter.py  parser.py
