[tool.poetry]
name = "yabibf"
version = "0.1.0"
description = "Yet Another BIBliography Formatter"
authors = ["Marcel Bollmann <marcel@bollmann.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bibtexparser = {git = "https://github.com/sciunto-org/python-bibtexparser"}
citeproc-py = "0.6.0"
citeproc-py-styles = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
