[tool.black]
line-length = 90
target-version = ['py38', 'py39', 'py310', 'py311']
skip-string-normalization = false

[tool.ruff]
ignore = ['E501']  # "Line too long" is black's job
target-version = 'py311'

[tool.poetry]
name = "yabibf"
version = "0.1.2"
description = "Yet Another BIBliography Formatter"
authors = ["Marcel Bollmann <marcel@bollmann.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
bibtexparser = {git = "https://github.com/sciunto-org/python-bibtexparser"}
citeproc-py = "0.6.0"
citeproc-py-styles = "^0.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
